--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AmgyGPT</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>amgyGPT</title>
 </head>
 <body>
-    <h2>AmgyGPT -_-</h2>
-    <h3>ChatGPT, with an attitude. <i>>Now 100% more amgy!</i></h3>
+    <h1>amgyGPT -_-</h1>
+    <h3>ChatGPT, with an attitude.</h3>
+
+    <img src="https://preview.redd.it/rfgv6fy0gti41.jpg?auto=webp&s=cc1106930f826c4bc90ab39ad462a60feeadf877"
+         alt="Angry pomeranian dog">
+    <a href="https://www.reddit.com/r/amgy/comments/f8n5z3/amgy/" style="display: block">
+        https://www.reddit.com/r/amgy/comments/f8n5z3/amgy/
+    </a>
+
+    <h3><i>>Now 100% more amgy!</i> (ง •̀_•́)ง</h3>
 
     <br>
+    <a href="/chat" style="font-size: 20px;">Chat!</a>
 
-    <a href="/chat">Chat!</a>
+    <br>
+    <p style="font-size: x-small;"><i>(I don't like css)</i></p>
 </body>
 </html>
