Removes Reddit link

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,7 @@
 
     <img src="https://preview.redd.it/rfgv6fy0gti41.jpg?auto=webp&s=cc1106930f826c4bc90ab39ad462a60feeadf877"
          alt="Angry pomeranian dog">
-    <a href="https://www.reddit.com/r/amgy/comments/f8n5z3/amgy/" style="display: block">
-        https://www.reddit.com/r/amgy/comments/f8n5z3/amgy/
-    </a>
+    <span>Image credit: https://www.reddit.com/r/amgy/comments/f8n5z3/amgy/</span>
 
     <h3><i>>Now 100% more amgy!</i> (ง •̀_•́)ง</h3>
 
