Licenses and description for publishing

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,5 +23,11 @@
 
     <br>
     <p style="font-size: x-small;"><i>(I don't like css)</i></p>
+
+    <br>
+    <p>
+        Source code for this project is availiable at
+        <a href="https://github.com/skivdal/amgy-gpt">github.com/skivdal/amgy-gpt</a>
+    </p>
 </body>
 </html>
